# InnerEar

./: .gitignore  .gitmodules  BUILDING.md  InnerEar-simple.db  InnerEar.db  Makefile  README.md
InnerEar/: Synth.hs  WebAudio.hs
InnerEar/WebAudio/: Foreign.hs  Types.hs
MusicW/: musicw.cabal
client/: InnerEarClient.cabal  index.html  stack.yaml
reflex-synth/: reflex-synth.cabal  stack.yaml
reflex-synth/src/Reflex/Synth/: AudioRoutingGraph.hs  Buffer.hs  Components.hs  Foreign.hs  Graph.hs  Node.hs  NodeSpec.hs  Sound.hs  Spec.hs  Synth.hs  Synthstance.hs  Types.hs  Utils.hs  WebAudio.hs  WebAudioGraph.hs  WebAudioNode.hs
server/: InnerEarServer.cabal  stack.yaml
src/: InnerEarClient.hs  InnerEarServer.hs
src/InnerEar/: Synth.hs  WebSocket.hs
src/InnerEar/Database/: Events.hs  ExerciseId.hs  SQLite.hs  Stores.hs  Users.hs
src/InnerEar/Exercises/: AddedWhiteNoise.hs  BoostOrCut.hs  Compression.hs  FiveBandBoostCut.hs  FiveBandsBoostCut.hs  FrequencyEnvelope.hs  GainBoost.hs  HarmonicDistortion.hs  HarmonicsOne.hs  Intervals1.hs  LeftRightCentre.hs  MultipleChoice.hs  OddEvenAll.hs  Prototype.hs  RT60.hs  SpectralShape.hs  TenBandBoostCut.hs  ThresholdOfSilence.hs
src/InnerEar/Types/: Data.hs  Datum.hs  Exercise.hs  ExerciseId.hs  ExerciseNavigation.hs  Frequency.hs  GScore.hs  Handle.hs  MultipleChoiceStore.hs  Password.hs  Point.hs  Record.hs  Request.hs  Response.hs  Score.hs  Server.hs  Sound.hs  User.hs  Utility.hs
src/InnerEar/Widgets/: AnswerButton.hs  Bars.hs  Canvas.hs  Circles.hs  Client.hs  Config.hs  CreateUser.hs  DynSvg.hs  Exercise.hs  Labels.hs  Lines.hs  Login.hs  Navigation.hs  RangePicker.hs  ScoreGraphs.hs  Sound.hs  SpecEval.hs  SpecGraph.hs  Test.hs  UserList.hs  UserMedia.hs  UserPage.hs  Utility.hs
static/: InnerEarWebSocket.js  index.html  oscillator.js  reflex-synth.js  style.css  temporaryWebServer.js
