name:                InnerEarClient
version:             0.0.0.1
synopsis:            Web-based adaptive ear training
description:         Please see README.md
homepage:            http://github.com/d0kt0r0/InnerEar/blob/master/README.md
license:             GPL-3
license-file:        ../LICENSE
author:              Eldad Tsabary, David Ogborn, Jamie Beverley, Luis Navarro del Angel, Spencer Park and others
maintainer:          ogbornd@mcmaster.ca
copyright:           2017- Eldad Tsabary, David Ogborn, Jamie Beverley, Luis Navarro del Angel, Spencer Park and others
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:

executable InnerEarClient
  hs-source-dirs:    src
  js-sources:        ../static/InnerEarWebSocket.js ../static/reflex-synth.js
  main-is:           InnerEarClient.hs
  build-depends:     base, reflex, reflex-dom,reflex-dom-contrib, containers, safe, ghcjs-base, ghcjs-dom,
                     text, array, ghcjs-prim, data-default, transformers, file-embed, time, tuple,
                     monad-loops, json, bytestring, random, musicw, reflex-dom-contrib,unordered-containers,hashable
  default-language:  Haskell2010
