name:                reflex-synth
version:             0.0.0.1
synopsis:            Library for describing Web Audio sound synthesis events, to be used with Reflex-DOM
description:         Please see README.md
homepage:            http://github.com/d0kt0r0/reflex-synth/blob/master/README.md
license:             GPL-3
license-file:        LICENSE
author:              David Ogborn, Jamie Beverley, Luis Navarro del Angel and others
maintainer:          ogbornd@mcmaster.ca
copyright:           2017 David Ogborn, Jamie Beverley, Luis Navarro del Angel and others
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:

Library
  hs-source-dirs:  src
  Build-Depends:   base, reflex, reflex-dom, containers, safe, ghcjs-base, ghcjs-dom, text,
                   array, ghcjs-prim, data-default, transformers, file-embed, time, monad-loops,
                   json, bytestring
  GHC-Options:     -Wall -fwarn-tabs
  Exposed-modules: Reflex.Synth.Types
                   Reflex.Synth.Synth
  default-language: Haskell2010 
