name:                InnerEarServer
version:             0.0.0.1
synopsis:            Web-based adaptive ear training
description:         Please see README.md
homepage:            http://github.com/d0kt0r0/InnerEar/blob/master/README.md
license:             GPL-3
license-file:        ../LICENSE
author:              Eldad Tsabary, David Ogborn, Jamie Beverley, Luis Navarro del Angel and others
maintainer:          ogbornd@mcmaster.ca
copyright:           2017 Eldad Tsabary, David Ogborn, Jamie Beverley, Luis Navarro del Angel and others
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:

executable InnerEarServer
  hs-source-dirs:    src
  main-is:           InnerEarServer.hs
  build-depends:     base, containers, text, json, websockets, time, tuple, transformers,
                     wai, warp, wai-websockets, wai-app-static, sqlite-simple, either, mtl, errors
  default-language:  Haskell2010
